# robotower

./: .gitignore  INFO.txt  Makefile  README  README.md  TODO  main.c  rfidconfig.txt  setup.sh  spykee.launch
Brian/brian/: CMakeLists.txt  mainpage.dox  manifest.xml
Brian/brian/config/: Align.rul  KickInGoal.rul  ManualMove.rul
Brian/brian/include/: assgram.tab.h  brian.h  predgram.tab.h  predicate.h  rulesgram.tab.h  shapegram.tab.h  wanter_eng.h  weight_want.h  weight_want_list_debug.h  weight_want_multimap.h
Brian/brian/prs/: predgram.y  rulesgram.y
Brian/brian/robaccia/: behavior_eng.d  predgram.tab.d  predicate.d  proposed_action_list.d  rules_behav.d
Brian/brian/src/: can_doer.cpp  can_doer.d  compose.cpp  engine_objects.d  preacher.h  predflex.cpp  predflex.d  predgram.tab.cpp  predgram.tab.hpp  predicate.cpp  predicate.h  predicate_list.d  predicate_list_debug.d  proposed_action_list.cpp  rulesflex.cpp  rulesgram.tab.cpp  rulesgram.tab.d  rulesgram.tab.hpp  weight_want_list.cpp  weight_want_list.d
Brian/brian/src/gmbte/: interface.h.bak
Brian/brian/src/parser/: predgram.tab.cpp  rulesgram.tab.cpp
Brian/checker/: CMakeLists.txt  mainpage.dox  manifest.xml
Brian/checker/include/: assgram.tab.h  assocgram.tab.h  predgram.tab.h  rulesgram.tab.h  shapegram.tab.h
Brian/checker/parser/: assgram.tab.c  check.d  predgram.tab.d  rulesflex.d  rulesgram.tab.c  shapegram.tab.c  shapegram.tab.d  shapegram.y
Brian/checker/prs/: assgram.y  predflex.l  predgram.y  rulesflex.l  rulesgram.y  shapegram.y
Brian/checker/src/: assflex.cpp  assflex.d  assflex.l  assgram.tab.cpp  check.cpp  predflex.cpp  predflex.d  predgram.tab.cpp  rulesflex.cpp  rulesgram.tab.cpp  rulesgram.tab.d  shapeflex.c  shapeflex.cpp  shapeflex.d  shapeflex.l  shapegram.tab.cpp
Brian/fuzzy/: CMakeLists.txt  Makefile.old  mainpage.dox
Brian/fuzzy/include/: action.h  assocgram.tab.h  association.h  association_set_multimap.h  command.h  command_list_debug.h  command_multimap.h  crisp_data.h  crisp_data_list_debug.h  fuzzy_data_list_debug.h  fuzzy_data_multimap.h  fuzzy_set.h  shape_multimap.h  shape_point.h  shapegram.tab.h  triangle_ol.h  triangle_or.h
Brian/fuzzy/prs/: assocflex.l  assocgram.y
Brian/fuzzy/src/: action.h  action_list_debug.cpp  assocflex.cpp  assocgram.output  assocgram.tab.cpp  assocgram.tab.hpp  association_list.cpp  command.d  command_list.h  crisp_data.h  data.cpp  data.d  fuzzy_data_list_debug.cpp  fuzzy_set.cpp  fuzzy_set.d  fuzzy_set.h  fuzzy_set_multimap.d  ltstr.h  point_multimap.d  shape_file_parser.d  shape_file_parser.h  shape_point.cpp  shapeflex.cpp  shapeflex.d  shapegram.tab.cpp  shapegram.tab.h  shapegram.tab.hpp  singleton.cpp  trapezium.cpp  trapezium.d  triangle.cpp  triangle.h  triangle_ol.cpp  triangle_or.cpp
Echoes/: CMakeLists.txt  manifest.xml
Firmware apricancelli/: Firmware Apricancelli.axf  Firmware Apricancelli.htm  Firmware Apricancelli.lnp  Firmware Apricancelli.map  Firmware Apricancelli.plg  Firmware Apricancelli.tra  Firmware Apricancelli.uvgui.stm32  Firmware Apricancelli.uvgui_stm32.bak  Firmware Apricancelli.uvopt  Firmware Apricancelli.uvproj  Firmware Apricancelli_Target 1.dep  Firmware Apricancelli_uvopt.bak  Firmware Apricancelli_uvproj.bak  libperiferiche.c  libperiferiche.crf  libperiferiche.d  libperiferiche.h  libusart.c  libusart.crf  libusart.d  libusart.h  main.c  main.crf  main.d  (+1 more)
echoes/: CMakeLists.txt  package.xml
echoes/include/: LedParser.h  RfidProcesser.h  SonarProcesser.h
echoes/msg/: Towers.msg
echoes/src/: CharCircularBuffer.cpp  Dispatcher.cpp  LedParser.cpp  RfidProcesser.cpp  SerialCommunication.cpp  SonarProcesser.cpp  TowerProcesser.cpp  displaySonar.py  main.cpp
echoes/srv/: ResetLed.srv
isaac/: CMakeLists.txt  old.package.xml
isaac/config/: AvoidObstacle.rul  Destroy.rul  Dritto.rul  GoBack.rul  GoToTower.rul  PredicateActions.ini  Want.ini  ctof.txt  s_ftoc.txt  s_shape.txt  shape_ctof.txt
isaac/include/: SensorStatus.h
isaac/src/: BlockedTimeCalculator.cpp  IsaacStrategy.cpp  Sender.cpp  SensorStatus.cpp
little_endian/: CMakeLists.txt  package.xml
little_endian/include/: Zone.h
little_endian/src/: LittleObject.cpp
mr_brian/: CMakeLists.txt  package.xml
mr_brian/brian/include/: behavior_eng.h  proposed_action.h  proposed_action_list.h
mr_brian/brian/src/: behavior_eng.cpp  engine_objects.cpp  proposed_action_list_debug.cpp
mr_brian/checker/: .manifest.xml.kate-swp  CMakeLists.txt  package.xml
mr_brian/checker/include/: assgramc.tab.h  predgramc.tab.h  rulesgramc.tab.h  shapegramc.tab.h
mr_brian/checker/parser/: assgram.tab.d
mr_brian/checker/src/: check.cpp  shapegram.y
mr_brian/fuzzy/include/: action_list_debug.h  barycentre_defuzzyfier.h  crisp_data_multimap.h  data.h  destroy_object.h  fuzzy_data.h  fuzzy_set_multimap.h  getFuzzy.h  point.h  trapezium.h
mr_brian/fuzzy/src/: action.cpp  barycentre_defuzzyfier.cpp  crisp_data.cpp  fuzzy_crisp_rel.cpp  fuzzyfier.cpp  point.cpp  shapes_list.cpp
mr_brian/gmbte/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  prova.gmbte
mr_brian/gmbte/src/: interface.cpp
mr_brian/mr_brian/: CMakeLists.txt  package.xml
mr_brian/mr_brian/brian/src/: predgram.y  wanter_eng.cpp
mr_brian/mr_brian/fuzzy/include/: assoc_file_parser.h  association_list.h  singleton.h
mr_brian/mr_brian/fuzzy/src/: assocgram.y  shape.cpp  shapeflex.l  shapegram.y  triangle_ol.cpp
robotower/: CMakeLists.txt  package.xml  robotower.xml
robotower/include/: GameConfiguration.h  GameControl.h  GameHistory.h  RTCards.h  RTMainWindow.h  RTPopupTimer.h  RosComunication.h
robotower/src/: ConfigurationFactory.cpp  RTCards.cpp  RTMainWindow.cpp  RTPopupTimer.cpp  RosComunication.cpp
spykee/: CMakeLists.txt  mainpage.dox  package.xml
spykee/src/: SpykeeManager.cpp  manualController.py  spykee.cpp
vision/: CMakeLists.txt  package.xml
vision/include/: Blob.h  BlobInfo.h  ImageAnalyzer.h  PixelMap.h  VisionParameters.h
vision/msg/: Results.msg
vision/src/: ColorDataset.cpp  ImageAnalyzer.cpp  PixelMap.cpp  VisionParameters.cpp  main.cpp
(+557 files in other folders)
