<package>
	<name>mr_brian</name>
	<version>1.1.1</version>
	<description>
		MrBrian
	</description>
	<maintainer email="davide.tateo@mail.polimi.it">Davide Tateo</maintainer>
	<license>BSD</license>

	<author>Davide Tateo</author>
	<url>http://ros.org/wiki/mr_brian</url>

	<build_depend>roscpp</build_depend>
	<buildtool_depend>catkin</buildtool_depend>
</package>


