<package>
	<name>checker</name>
	<version>1.1.1</version>
	<description>
		Debugger per knowledgebase di brian
	</description>
	<maintainer email="davide.tateo@mail.polimi.it">Davide Tateo</maintainer>
	<license>Gplv3</license>

	<author>Davide Tateo</author>
	<url>http://ros.org/wiki/checker</url>
	
	<buildtool_depend>catkin</buildtool_depend>
</package>


