<package>
	<name>gmbte</name>
	<version>1.1.1</version>
	<description>
		Debugger grafico per MrBrian
	</description>
	<maintainer email="davide.tateo@mail.polimi.it">Davide Tateo</maintainer>
	<license>BSD</license>

	<author>Davide Tateo</author>
	<url>http://ros.org/wiki/gmbte</url>
	
	<build_depend>mr_brian</build_depend>
	
	<buildtool_depend>catkin</buildtool_depend>
</package>


